Added role based access and logging.