@@ -8,16 +8,19 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
 import com.valerko.lgs.domain.ApplicantApplication;
 import com.valerko.lgs.domain.Faculty;
+import com.valerko.lgs.domain.FacultyReport;
 import com.valerko.lgs.domain.Subject;
 import com.valerko.lgs.domain.User;
 import com.valerko.lgs.dto.ApplicantApplicationDto;
 import com.valerko.lgs.service.impl.ApplicationServiceImpl;
+import com.valerko.lgs.service.impl.FacultyReportServiceImpl;
 import com.valerko.lgs.service.impl.FacultyServiceImpl;
 import com.valerko.lgs.service.impl.SubjectServiceImpl;
 import com.valerko.lgs.service.impl.UserServiceImpl;
@@ -36,8 +39,11 @@ public class ApplicationController {
 	private FacultyServiceImpl facultyServiceImpl;
 	@Autowired
 	private SubjectServiceImpl subjectServiceImpl;
+	@Autowired
+	private FacultyReportServiceImpl facultyReportServiceImpl;
 
 	@RequestMapping(value = "/getapplication", method = RequestMethod.GET)
+	@PreAuthorize("hasRole('ROLE_USER')")
 	public ApplicantApplicationDto getApplicantApplication() {
 		String username = null;
 		Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
@@ -56,21 +62,24 @@ public class ApplicationController {
 			return applicantApplicationDto;
 		}
 		return null;
-	}
-	
-	@RequestMapping(value = "/applicationByFaculty", method = RequestMethod.GET)
-	public List<ApplicantApplicationDto> getAllApplicipantApplication(@RequestParam("facultyName") String faculty) {
-		List<ApplicantApplicationDto> allApplications = new ArrayList<ApplicantApplicationDto>();
-		userServiceImpl.findAllUsers().forEach(u -> {
-			Optional<ApplicantApplication> optionalApplication = applicationServiceImpl.findByUser(u);
-			optionalApplication.ifPresent(applicantApplication -> allApplications.add(ApplicantApplicationDto.mapToApplicantApplicationDto(applicantApplication)));
-		});
-		List<ApplicantApplicationDto> list = allApplications.stream()
-				.filter(a -> a.getFaculty().equalsIgnoreCase(faculty)).toList();
+	}	
+
+	@RequestMapping(value = "/applicationsByFaculty", method = RequestMethod.GET)
+	@PreAuthorize("hasRole('ROLE_ADMIN')")
+	public List<ApplicantApplicationDto> getApplicationByFaculty(@RequestParam String facultyName) {
+		List<ApplicantApplicationDto> list = new ArrayList<ApplicantApplicationDto>();
+		Faculty faculty;
+		Optional<Faculty> optionalFaculty = facultyServiceImpl.findByName(facultyName);
+		if (optionalFaculty.isEmpty())
+			return null;
+		faculty = optionalFaculty.get();
+		list = applicationServiceImpl.findApplicationsByFaculty(faculty).stream()
+				.map(ApplicantApplicationDto::mapToApplicantApplicationDto).collect(Collectors.toList());
 		return list;
 	}
 
 	@RequestMapping(value = "/saveapplication", method = RequestMethod.POST)
+	@PreAuthorize("hasRole('ROLE_USER')")
 	public String saveApplicantApplication(@RequestBody ApplicantApplicationDto applicantApplicationDto)
 			throws IOException {
 		ApplicantApplication applicantApplication;
@@ -108,27 +117,17 @@ public class ApplicationController {
 	}
 
 	@RequestMapping(value = "/numberOfApplication", method = RequestMethod.GET)
+	@PreAuthorize("hasRole('ROLE_ADMIN')")
 	public Map<String, Long> getNumberOfApplication() {
 		Map<String, Long> listOfNumber = applicationServiceImpl.findAll().stream()
 				.collect(Collectors.groupingBy(a -> a.getFaculty().getName(), Collectors.counting()));
 		return listOfNumber;
 	}
 
-	@RequestMapping(value = "/applicationsByFaculty", method = RequestMethod.GET)
-	public List<ApplicantApplicationDto> getApplicationByFaculty(@RequestParam String facultyName) {
-		List<ApplicantApplicationDto> list = new ArrayList<ApplicantApplicationDto>();
-		Faculty faculty;
-		Optional<Faculty> optionalFaculty = facultyServiceImpl.findByName(facultyName);
-		if (optionalFaculty.isEmpty())
-			return null;
-		faculty = optionalFaculty.get();
-		list = applicationServiceImpl.findApplicationsByFaculty(faculty).stream()
-				.map(ApplicantApplicationDto::mapToApplicantApplicationDto).collect(Collectors.toList());
-		return list;
-	}
 
 	@Transactional
 	@RequestMapping(value = "/deleteApplication", method = RequestMethod.DELETE)
+	@PreAuthorize("hasRole('ROLE_USER')")
 	public String deleteApplication() {
 		String username = null;
 		Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
@@ -139,6 +138,10 @@ public class ApplicationController {
 		if (optionalUser.isEmpty())
 			return "user not found";
 		User user = optionalUser.get();
+		List<FacultyReport> allReports = facultyReportServiceImpl.findAll();
+		allReports.stream().forEach(report -> {
+			report.getApplications().removeIf(appl -> appl.getUser().equals(user));
+		});
 		applicationServiceImpl.deleteByUser(user);
 		return "success";
 	}
